syntax = "proto3";
package novel;
option go_package="./;novelpb";

message Chapter {
    int64 start = 1;
    int64 end = 2;
}

message Tag {
    int64 id = 1;
    string name = 2;
}

message PartialNovel {
    int64 id = 1;
    string title = 2;
    string imagePath = 3;
    repeated Tag tags = 4;
}

message FullNovel {
    PartialNovel novel = 1;
    string author = 2;
    string summary = 3;
    int64 nbChapter = 4;
    repeated Chapter chapters = 5;
}

// Request / Response

message GetBookRequest {
    int64 novelId = 1;
    Chapter chapter = 2;
}

message GetBookResponse {
    bytes chunk = 1;
}

message GetNovelRequest{
    oneof field_search {
        int64 id = 1;
        string title = 2;
    }
}

message GetNovelResponse {
    FullNovel novel = 1;
}

message ListNovelRequest { }

message ListNovelResponse {
    repeated PartialNovel novels = 1;
}

message ScrapeNovelRequest {
    string title = 1;
}

message ScrapeNovelResponse {
}

service NovelServer{
    rpc GetBook(GetBookRequest) returns (stream GetBookResponse) {};
    rpc GetNovel(GetNovelRequest) returns (GetNovelResponse) {};
    rpc ListNovel(ListNovelRequest) returns (ListNovelResponse) {};
    rpc ScrapeNovel(ScrapeNovelRequest) returns (ScrapeNovelResponse) {};
}